force-app/main/default/objects/Case/fields/Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Advertiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Annonceur</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Annonceur</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requêtes (Annonceur)</relationshipLabel>
    <relationshipName>Annonceur</relationshipName>
    <type>Lookup</type>
</CustomField>