force-app/main/default/objects/Case/fields/AdvertizerContact__c.field-meta.xml
<CustomField>
    <fullName>AdvertizerContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact annonceur</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requêtes (Contact annonceur)</relationshipLabel>
    <relationshipName>Requ_tes1</relationshipName>
    <type>Lookup</type>
</CustomField>