force-app/main/default/objects/Case/fields/AdvertizerContactEmail__c.field-meta.xml
<CustomField>
    <fullName>AdvertizerContactEmail__c</fullName>
    <formula>OI_Id__r.AdvertiserContact__r.Email</formula>
    <label>Email du contact annonceur</label>
    <type>Text</type>
</CustomField>