force-app/main/default/objects/Case/fields/AgencyContact__c.field-meta.xml
<CustomField>
    <fullName>AgencyContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact agence</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requêtes (Contact agence)</relationshipLabel>
    <relationshipName>Requ_tes</relationshipName>
    <type>Lookup</type>
</CustomField>