force-app/main/default/objects/Case/fields/AgencyContactEmail__c.field-meta.xml
<CustomField>
    <fullName>AgencyContactEmail__c</fullName>
    <formula>OI_Id__r.AgencyContact__r.Email</formula>
    <label>Email du contact agence</label>
    <type>Text</type>
</CustomField>