force-app/main/default/objects/Case/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Marque</label>
    <length>255</length>
    <type>Text</type>
</CustomField>