force-app/main/default/objects/Case/fields/CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CampaignName__c</fullName>
    <label>Nom campagne</label>
    <length>255</length>
    <type>Text</type>
</CustomField>