force-app/main/default/objects/Case/fields/CampaignType__c.field-meta.xml
<CustomField>
    <fullName>CampaignType__c</fullName>
    <label>Type de campagne</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ecommerce</fullName>
            </value>
            <value>
                <fullName>Activation Data</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>