force-app/main/default/objects/Case/fields/Capping__c.field-meta.xml
<CustomField>
    <fullName>Capping__c</fullName>
    <label>Capping</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>