force-app/main/default/objects/Case/fields/CSMenCharge__c.field-meta.xml
<CustomField>
    <fullName>CSMenCharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CSM en charge repris automatiquement de l&apos;opportunité quand la requête est générée à l&apos;appui du bouton &quot;Générer les requêtes&quot;</description>
    <label>CSM en charge</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>