force-app/main/default/objects/Case/fields/Date_de_fin_theorique__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_theorique__c</fullName>
    <description>Date remplie automatiquement lors de la génération de la requête par la date de fin théorique du produit d&apos;opportunité lié à la requête.</description>
    <inlineHelpText>Date remplie automatiquement lors de la génération de la requête par la date de fin théorique du produit d&apos;opportunité lié à la requête.</inlineHelpText>
    <label>Date de fin théorique</label>
    <type>Date</type>
</CustomField>