force-app/main/default/objects/Case/fields/Date_Debut_Theorique__c.field-meta.xml
<CustomField>
    <fullName>Date_Debut_Theorique__c</fullName>
    <description>Date remplie automatiquement lors de la génération de la requête par la date dé début théorique du produit d&apos;opportunité lié à la requête.</description>
    <inlineHelpText>Date remplie automatiquement lors de la génération de la requête par la date dé début théorique du produit d&apos;opportunité lié à la requête.</inlineHelpText>
    <label>Date de début théorique</label>
    <type>Date</type>
</CustomField>