force-app/main/default/objects/Case/fields/Demande_de_bilan_intermediaire__c.field-meta.xml
<CustomField>
    <fullName>Demande_de_bilan_intermediaire__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A cocher si le client demande un bilan intermédiaire. Une tâche sera alors automatiquement créée.</inlineHelpText>
    <label>Demande de bilan intermédiaire</label>
    <type>Checkbox</type>
</CustomField>