force-app/main/default/objects/Case/fields/Done__c.field-meta.xml
<CustomField>
    <fullName>Done__c</fullName>
    <formula>EndDate__c == TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terminé?</label>
    <type>Checkbox</type>
</CustomField>