force-app/main/default/objects/Case/fields/EANList__c.field-meta.xml
<CustomField>
    <fullName>EANList__c</fullName>
    <label>Listing EAN</label>
    <type>TextArea</type>
</CustomField>