force-app/main/default/objects/Case/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>Date de fin réelle</label>
    <type>Date</type>
</CustomField>