force-app/main/default/objects/Case/fields/Enseignes__c.field-meta.xml
<CustomField>
    <fullName>Enseignes__c</fullName>
    <label>Enseignes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Enseignes</valueSetName>
    </valueSet>
</CustomField>