force-app/main/default/objects/Case/fields/Formats__c.field-meta.xml
<CustomField>
    <fullName>Formats__c</fullName>
    <label>Formats Extension d&apos;audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IAB</fullName>
            </value>
            <value>
                <fullName>Native</fullName>
            </value>
            <value>
                <fullName>Habillage</fullName>
            </value>
            <value>
                <fullName>VOL</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Youtube Bumper 6s</fullName>
            </value>
            <value>
                <fullName>Intream skippable</fullName>
            </value>
            <value>
                <fullName>Youtube Instream non skippable</fullName>
            </value>
            <value>
                <fullName>Diptyque</fullName>
            </value>
            <value>
                <fullName>Quadriptyque</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Sponso</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
            </value>
            <value>
                <fullName>Grand angle</fullName>
            </value>
            <value>
                <fullName>Tuile Display</fullName>
            </value>
            <value>
                <fullName>Tuile produit</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
            <value>
                <fullName>Display IAB</fullName>
            </value>
            <value>
                <fullName>1000x90</fullName>
                <isActive>false</isActive>
                <label>1000x90</label>
            </value>
            <value>
                <fullName>160x600</fullName>
                <isActive>false</isActive>
                <label>160x600</label>
            </value>
            <value>
                <fullName>170x170</fullName>
                <isActive>false</isActive>
                <label>170x170</label>
            </value>
            <value>
                <fullName>1800x1000 (Habillage)</fullName>
                <isActive>false</isActive>
                <label>1800x1000 (Habillage)</label>
            </value>
            <value>
                <fullName>300x250</fullName>
                <isActive>false</isActive>
                <label>300x250</label>
            </value>
            <value>
                <fullName>300x600</fullName>
                <isActive>false</isActive>
                <label>300x600</label>
            </value>
            <value>
                <fullName>320x100</fullName>
                <isActive>false</isActive>
                <label>320x100</label>
            </value>
            <value>
                <fullName>320x100 (Bannière mobile)</fullName>
                <isActive>false</isActive>
                <label>320x100 (Bannière mobile)</label>
            </value>
            <value>
                <fullName>320x50 (Bannière Mobile)</fullName>
                <isActive>false</isActive>
                <label>320x50 (Bannière Mobile)</label>
            </value>
            <value>
                <fullName>728x90</fullName>
                <isActive>false</isActive>
                <label>728x90</label>
            </value>
            <value>
                <fullName>970x250</fullName>
                <isActive>false</isActive>
                <label>970x250</label>
            </value>
            <value>
                <fullName>Autres formats à préciser</fullName>
                <isActive>false</isActive>
                <label>Autres formats à préciser</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>