force-app/main/default/objects/Case/fields/MainKPI__c.field-meta.xml
<CustomField>
    <fullName>MainKPI__c</fullName>
    <label>KPI principal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>KPIs</valueSetName>
    </valueSet>
</CustomField>