force-app/main/default/objects/Case/fields/MediaBudget__c.field-meta.xml
<CustomField>
    <fullName>MediaBudget__c</fullName>
    <label>Budget Média (hors mesure)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>