force-app/main/default/objects/Case/fields/Mesure__c.field-meta.xml
<CustomField>
    <fullName>Mesure__c</fullName>
    <label>Mesure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
            <value>
                <fullName>Ne sait pas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>