force-app/main/default/objects/Case/fields/Numero_RCDMP__c.field-meta.xml
<CustomField>
    <fullName>Numero_RCDMP__c</fullName>
    <description>C&apos;est la cross référence avec le système de facturation externe RCDMP où sont gérées les requêtes de Promotion Personnnalisée.</description>
    <label>Numéro RCDMP</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>