force-app/main/default/objects/Case/fields/OI_Id__c.field-meta.xml
<CustomField>
    <fullName>OI_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Requête</relationshipLabel>
    <relationshipName>Requete</relationshipName>
    <type>Lookup</type>
</CustomField>