force-app/main/default/objects/Case/fields/OI_signed__c.field-meta.xml
<CustomField>
    <fullName>OI_signed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Signé / Autres ( NDA, PV, BDC, …) - upload de fichier</inlineHelpText>
    <label>Signé / Autres ( NDA, PV, BDC...)</label>
    <type>Checkbox</type>
</CustomField>