force-app/main/default/objects/Case/fields/Pixel_campaign_manager__c.field-meta.xml
<CustomField>
    <fullName>Pixel_campaign_manager__c</fullName>
    <label>Pixel campaign manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>