force-app/main/default/objects/Case/fields/PromogamingProduct__c.field-meta.xml
<CustomField>
    <fullName>PromogamingProduct__c</fullName>
    <label>Produit promogaming</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temps fort</fullName>
            </value>
            <value>
                <fullName>Mono</fullName>
            </value>
            <value>
                <fullName>1er panier</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>