force-app/main/default/objects/Case/fields/SegmentNames_TargetingID__c.field-meta.xml
<CustomField>
    <fullName>SegmentNames_TargetingID__c</fullName>
    <label>Ciblage data ID MICS et noms segments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>