force-app/main/default/objects/Case/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Date de début réel</label>
    <type>Date</type>
</CustomField>