force-app/main/default/objects/Case/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Enseigne</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casino</fullName>
            </value>
            <value>
                <fullName>Cmax</fullName>
            </value>
            <value>
                <fullName>Franprix</fullName>
            </value>
            <value>
                <fullName>Intermarché</fullName>
            </value>
            <value>
                <fullName>Monoprix</fullName>
            </value>
            <value>
                <fullName>Monoprix &amp; moi</fullName>
            </value>
            <value>
                <fullName>Campagnes Hors catalogue</fullName>
                <isActive>false</isActive>
                <label>Campagnes Hors catalogue</label>
            </value>
            <value>
                <fullName>Casino Supermarché</fullName>
                <isActive>false</isActive>
                <label>Casino Supermarché</label>
            </value>
            <value>
                <fullName>Display AE</fullName>
                <isActive>false</isActive>
                <label>Display AE</label>
            </value>
            <value>
                <fullName>Géant Casino</fullName>
                <isActive>false</isActive>
                <label>Géant Casino</label>
            </value>
            <value>
                <fullName>Leader Price</fullName>
                <isActive>false</isActive>
                <label>Leader Price</label>
            </value>
            <value>
                <fullName>Monopix</fullName>
                <isActive>false</isActive>
                <label>Monopix</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>