force-app/main/default/objects/Case/fields/Tech_Produit_Opp__c.field-meta.xml
<CustomField>
    <fullName>Tech_Produit_Opp__c</fullName>
    <label>Tech_Produit_Opp</label>
    <length>18</length>
    <type>Text</type>
</CustomField>