force-app/main/default/objects/Case/fields/URL_LandingPage__c.field-meta.xml
<CustomField>
    <fullName>URL_LandingPage__c</fullName>
    <label>URL de redirection</label>
    <type>Url</type>
</CustomField>