force-app/main/default/objects/Case/recordTypes/CREA_BriefCrea.recordType-meta.xml
<RecordType>
    <fullName>CREA_BriefCrea</fullName>
    <active>true</active>
    <businessProcess>Demandes</businessProcess>
    <label>Brief Créa</label>
</RecordType>