force-app/main/default/objects/Case/recordTypes/Extension_Audience.recordType-meta.xml
<RecordType>
    <fullName>Extension_Audience</fullName>
    <active>true</active>
    <businessProcess>S5_Process Infinity</businessProcess>
    <label>Extension d&apos;audience</label>
</RecordType>