force-app/main/default/objects/Case/recordTypes/Facturation.recordType-meta.xml
<RecordType>
    <fullName>Facturation</fullName>
    <active>true</active>
    <businessProcess>Demandes</businessProcess>
    <label>Facturation</label>
</RecordType>