force-app/main/default/objects/Case/recordTypes/Frais_Graphiques.recordType-meta.xml
<RecordType>
    <fullName>Frais_Graphiques</fullName>
    <active>true</active>
    <businessProcess>S5_Process Infinity</businessProcess>
    <label>Frais Graphiques</label>
</RecordType>