force-app/main/default/objects/Case/recordTypes/MEL_Ecommerce.recordType-meta.xml
<RecordType>
    <fullName>MEL_Ecommerce</fullName>
    <active>true</active>
    <businessProcess>Demandes</businessProcess>
    <label>Demande Mise en Ligne - Ecommerce</label>
</RecordType>