force-app/main/default/objects/Case/recordTypes/MEL_Promogaming.recordType-meta.xml
<RecordType>
    <fullName>MEL_Promogaming</fullName>
    <active>true</active>
    <businessProcess>Demandes</businessProcess>
    <label>Demande Mise en Ligne - Promogaming</label>
</RecordType>