force-app/main/default/objects/Case/recordTypes/Mesure.recordType-meta.xml
<RecordType>
    <fullName>Mesure</fullName>
    <active>true</active>
    <businessProcess>S5_Process Infinity</businessProcess>
    <label>Mesure</label>
</RecordType>