force-app/main/default/objects/Case/recordTypes/ONLINE_BUPGC_DemandeMiseEnLigne.recordType-meta.xml
<RecordType>
    <fullName>ONLINE_BUPGC_DemandeMiseEnLigne</fullName>
    <active>true</active>
    <businessProcess>Demandes</businessProcess>
    <label>Demande Mise en Ligne - Activation Data</label>
</RecordType>