force-app/main/default/objects/Case/recordTypes/Promotion_Personnalisee.recordType-meta.xml
<RecordType>
    <fullName>Promotion_Personnalisee</fullName>
    <active>true</active>
    <businessProcess>S5_Process Infinity</businessProcess>
    <label>Promotion Personnalisée</label>
</RecordType>