force-app/main/default/objects/Case/recordTypes/Retail_Media_OnSite.recordType-meta.xml
<RecordType>
    <fullName>Retail_Media_OnSite</fullName>
    <active>true</active>
    <businessProcess>S5_Process Infinity</businessProcess>
    <label>Retail Media OnSite</label>
</RecordType>