force-app/main/default/objects/Case/recordTypes/Search.recordType-meta.xml
<RecordType>
    <fullName>Search</fullName>
    <active>true</active>
    <businessProcess>S5_Process Infinity</businessProcess>
    <label>Search</label>
</RecordType>