force-app/main/default/objects/Case/recordTypes/Segment_Data.recordType-meta.xml
<RecordType>
    <fullName>Segment_Data</fullName>
    <active>true</active>
    <businessProcess>Demandes</businessProcess>
    <label>Segment Data</label>
</RecordType>