force-app/main/default/objects/Case/recordTypes/VerificationVolumesActivationData.recordType-meta.xml
<RecordType>
    <fullName>VerificationVolumesActivationData</fullName>
    <active>true</active>
    <businessProcess>Demandes</businessProcess>
    <label>Vérification volumes activation data</label>
</RecordType>