force-app/main/default/objects/Case/listViews/Activation_Data_Case.listView-meta.xml
<ListView>
    <fullName>Activation_Data_Case</fullName>
    <columns>CASES.SUBJECT</columns>
    <columns>OI_Id__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Activation Data</label>
    <queue>Activation_Data</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>