force-app/main/default/objects/Case/listViews/Brief_Crea_Case.listView-meta.xml
<ListView>
    <fullName>Brief_Crea_Case</fullName>
    <columns>CASES.SUBJECT</columns>
    <columns>OI_Id__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Brief Créa</label>
    <queue>Brief_Crea</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>