force-app/main/default/objects/Case/listViews/Mesure_Case.listView-meta.xml
<ListView>
    <fullName>Mesure_Case</fullName>
    <columns>CASES.SUBJECT</columns>
    <columns>OI_Id__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Mesure</label>
    <queue>Mesure</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>