force-app/main/default/objects/Case/listViews/Promogaming_Case.listView-meta.xml
<ListView>
    <fullName>Promogaming_Case</fullName>
    <columns>CASES.SUBJECT</columns>
    <columns>OI_Id__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Promogaming</label>
    <queue>Promogaming</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>