force-app/main/default/objects/Case/listViews/VerificationVolumesActivationData_Case.listView-meta.xml
<ListView>
    <fullName>VerificationVolumesActivationData_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Vérification volumes activation data</label>
    <queue>VerificationVolumesActivationData</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>